// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Provisioners Card > should disable the \`Show More\` button if there is no more data to display 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 10 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    class="data-card__content"
  >
    <div
      class="table-container provisioners-table data-card__table"
    >
      <table
        class="table"
      >
        <thead
          class="table__head"
        >
          <tr
            class="table__row"
          >
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  #
                </span>
                 
                <span
                  class="provisioners-table__header-sort-indicator"
                >
                  ↓
                </span>
              </button>
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  Staking Address
                </span>
                 
              </button>
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  Owner Key
                </span>
                 
              </button>
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  Stake
                </span>
                 
                <span
                  class="provisioners-table__header-sort-indicator"
                >
                  ↓
                </span>
              </button>
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  Accumulated Reward
                </span>
                 
              </button>
            </th>
            
             
            <th
              class="table__header-cell align-left"
            >
              <button
                class="provisioners-table__header-button"
                type="button"
              >
                <span>
                  Slashes
                </span>
                 
              </button>
            </th>
            
          </tr>
        </thead>
         
        <tbody
          class="table__body"
        >
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              1
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                m6dy2gz3jC...tW82FWtnpf
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: m6dy2gz3jC...tW82FWtnpf"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,121.257296087 DUSK"
                data-tooltip-type="info"
              >
                7,121
                .
                <span
                  class="decimal-shadow"
                >
                  26
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              2
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                m9dVuRgr3C...94r33pFQyz
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: m9dVuRgr3C...94r33pFQyz"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="6,923.840604194 DUSK"
                data-tooltip-type="info"
              >
                6,923
                .
                <span
                  class="decimal-shadow"
                >
                  84
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              3
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mTgXDqkyVa...gAseybAsfU
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Owner: 0200000000...0000000000
Consensus: mTgXDqkyVa...gAseybAsfU"
              >
                Yes
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,518.756679536 DUSK"
                data-tooltip-type="info"
              >
                7,518
                .
                <span
                  class="decimal-shadow"
                >
                  76
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              4
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mUUpjnXow2...SfzQcywzaW
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Owner: 0200000000...0000000000
Consensus: mUUpjnXow2...SfzQcywzaW"
              >
                Yes
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,653.541671166 DUSK"
                data-tooltip-type="info"
              >
                7,653
                .
                <span
                  class="decimal-shadow"
                >
                  54
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              5
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mXKJ97xTtr...JgkCK2o7x4
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: mXKJ97xTtr...JgkCK2o7x4"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,512.060104659 DUSK"
                data-tooltip-type="info"
              >
                7,512
                .
                <span
                  class="decimal-shadow"
                >
                  06
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              6
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mdXsA3Ee1Y...K8VZPimZ2J
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: mdXsA3Ee1Y...K8VZPimZ2J"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              500,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              0
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="7,973.118109253 DUSK"
                data-tooltip-type="info"
              >
                7,973
                .
                <span
                  class="decimal-shadow"
                >
                  12
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              7
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mHGvQ9Xdjz...iTfxTvgn7f
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Owner: 0200000000...0000000000
Consensus: mHGvQ9Xdjz...iTfxTvgn7f"
              >
                Yes
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              4,800
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              4,320
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="89.505343279 DUSK"
                data-tooltip-type="info"
              >
                89
                .
                <span
                  class="decimal-shadow"
                >
                  51
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              8
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mUJHMDEBiT...FHNxRNhoAA
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Owner: 0200000000...0000000000
Consensus: mUJHMDEBiT...FHNxRNhoAA"
              >
                Yes
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              4,800
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              23,760
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="73.800637305 DUSK"
                data-tooltip-type="info"
              >
                73
                .
                <span
                  class="decimal-shadow"
                >
                  80
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              9
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mLx5HUo5Ph...BrRgEzoka8
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: mLx5HUo5Ph...BrRgEzoka8"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              1,234
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              4,320
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="29.633646022 DUSK"
                data-tooltip-type="info"
              >
                29
                .
                <span
                  class="decimal-shadow"
                >
                  63
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
          <tr
            class="table__row"
          >
            <td
              class="table__data-cell align-left"
            >
              10
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <div
                class="provisioners-table__staking-address-wrapper"
              >
                mWvq9EWD9b...oU7BY2oEDe
                 
                <div
                  class="dusk-copy-button"
                >
                  <button
                    aria-label="Copy Address"
                    class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
                    data-tooltip-id="main-tooltip"
                    data-tooltip-text="Copy to clipboard"
                    type="button"
                  >
                    <svg
                      class="dusk-icon dusk-icon--size--default dusk-button__icon"
                      role="graphics-symbol"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                      />
                    </svg>
                    
                     
                    
                  </button>
                </div>
              </div>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                class="dusk-badge dusk-badge--variant-neutral"
                data-tooltip-id="provisioners-tooltip"
                data-tooltip-text="Consensus: mWvq9EWD9b...oU7BY2oEDe"
              >
                No
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__stake-data-label"
              >
                Active:
              </b>
               
              1,000
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Inactive:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__stake-data-label"
              >
                Maturity At:
              </b>
              
          #
              8,640
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <span
                data-tooltip-id="main-tooltip"
                data-tooltip-place="top"
                data-tooltip-text="1.613840782 DUSK"
                data-tooltip-type="info"
              >
                1
                .
                <span
                  class="decimal-shadow"
                >
                  61
                </span>
              </span>
            </td>
            
             
            <td
              class="table__data-cell align-left"
            >
              <b
                class="provisioners-table__slash-data-label"
              >
                Soft:
              </b>
               
              0
               
              <br />
               
              <b
                class="provisioners-table__slash-data-label"
              >
                Hard:
              </b>
               
              0
            </td>
            
             
          </tr>
          
        </tbody>
      </table>
    </div>
    
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should disable the \`Show More\` button is the card is in the loading state 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  <div
    aria-label="Loading"
    class="dusk-progress-bar data-card__progress-bar"
    role="progressbar"
  >
    <div
      class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
    />
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should hide the \`Show More\` button if an error has occurred 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
  </header>
   
  <div
    class="alert"
  >
    <svg
      class="dusk-icon dusk-icon--size--large"
      role="graphics-symbol"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
      />
    </svg>
    
     
    <header>
      <p>
        There was an error fetching the data.
      </p>
       
      <p
        class="alert__error-message"
      >
        error
      </p>
    </header>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default"
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Retry
      </span>
    </button>
  </div>
  
   
</div>
`;

exports[`Provisioners Card > should render the \`ProvisionersCard\` component 1`] = `
<div
  class="dusk-card data-card"
>
  <header
    class="data-card__header"
    slot="header"
  >
    <h1
      class="data-card__header-title"
    >
      Provisioners — 0 Displayed Items
    </h1>
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Show More
      </span>
    </button>
  </header>
   
  
   
</div>
`;
